--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,4 @@
-homepage: "https://www.sidn.es/"
+homepage: "https://datalitica.es/"
 documentation: "https://datalitica.es/gtm-variable-personalizada-control-de-fecha-inicio-y-fin/"
 versions:
   # Latest version
