--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,9 +1,9 @@
 homepage: "https://datalitica.es/"
 documentation: "https://datalitica.es/gtm-variable-personalizada-control-de-fecha-inicio-y-fin/"
-versions:
+versions:Update template.tpl
   # Latest version
   - sha: 4c849300279fb5b30c09be9023a0993dbb7da80d
-    changeNotes: Update metadata doc with SHA.
+    changeNotes: Update template.tpl
   # Older version
   - sha: 0819501bc2648000ed0baf3517384778e63c7fd9
     changeNotes: Update metadata doc with SHA.
